# mkdocs-persistent-tasklist

./: .gitignore  LICENSE  README.md
server/: CMakeLists.txt  README.md
server/src/: config.hpp  dependencies.cmake  main.cpp  server.cpp  server.hpp
server/src/database/: database.cpp  database.hpp  task.hpp
server/src/detail/database/: database.cpp  database.hpp
server/src/protobuf/: tasks.proto
server/src/services/: available.hpp  tasks.cpp
